Profile frontend made. XML parsing error when uploading new avatar

--- a/src/frontend/src/assets/index.css
+++ b/src/frontend/src/assets/index.css
@@ -17,3 +17,7 @@ html {
 .h1 {
     @apply text-8xl mb-8 font-bold text-buff drop-shadow-lg;
 }
+
+.h2 {
+    @apply text-3xl mb-3 font-bold text-buff drop-shadow-lg;
+}
