match history frontend

--- a/src/frontend/src/assets/index.css
+++ b/src/frontend/src/assets/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-    @apply text-white bg-dark-purple font-mono !overflow-y-hidden;
+    @apply text-white bg-dark-purple font-mono;
 }
 
 .btn {
